# researchMate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  NODE01_PRODUCT_REVIEW.md  README.md  instruction.md  package-lock.json  package.json  requirements-dev.txt
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/researchmate_api/: __init__.py  config.py  dependencies.py  main.py  mcp_server.py  observability.py
apps/api/src/researchmate_api/persistence/: __init__.py  evidence_postgres.py  postgres.py
apps/api/src/researchmate_api/routers/: __init__.py  ask.py  dev_traces.py  documents.py  evidence.py  health.py  jobs.py  me.py  projects.py  quiz.py  runs.py
apps/api/src/researchmate_api/schemas/: ask.py  common.py  document.py  evidence.py  job.py  project.py  quiz.py  sources.py  trace.py
apps/api/src/researchmate_api/services/: answering.py  embedding.py  evidence_generation.py  evidence_store.py  grounded_query.py  llm.py  object_storage.py  protocols.py  qdrant_store.py  quiz_generation.py  retrieval.py  source_policy.py  store.py  web_search.py
docs/: HANDOFF.html  api-spec.html  db-schema.html  execution-plan.html  index.html  openapi-spec.html  progress-backend.html  progress-frontend.html  progress-ops.html  (+7 more)
workers/ai-worker/: Dockerfile  README.md  pyproject.toml
workers/ai-worker/src/researchmate_worker/: __init__.py  budget.py  celery_app.py  config.py  deletion.py  dispatch_outbox.py  evaluation.py  evidence_graph.py  fault_simulation.py  ingestion.py  jobs.py  outbox.py  parsing.py  runtime_health.py  tasks.py  workflow_runtime.py
(+223 files in other folders)
