[project]
name = "researchmate-api"
version = "0.1.0"
description = "Production-oriented Agentic RAG API for the ResearchMate engineering portfolio"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.42.0",
  "fastapi>=0.128.0",
  "httpx>=0.28.0,<1",
  "mcp>=1.27,<2",
  "langfuse>=4,<5",
  "openai>=1.68.0,<3",
  "opentelemetry-api>=1.38,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.38,<2",
  "opentelemetry-instrumentation-fastapi>=0.59b0,<1",
  "opentelemetry-sdk>=1.38,<2",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.0",
  "PyJWT[crypto]>=2.10.0",
  "qdrant-client>=1.18.0,<1.19",
  "redis>=6,<7",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.46",
  "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 100
