[project]
name = "researchmate-ai-worker"
version = "0.1.0"
description = "Durable ingestion, evidence-review, evaluation, and reliability workers for ResearchMate"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.42.0",
  "celery[redis]>=5.6.0",
  "docling==2.111.0",
  "docling-core==2.86.0",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-postgres>=3,<4",
  "langchain-community>=0.3.31,<0.4",
  "langfuse>=4,<5",
  "openai>=1.68.0,<3",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "psycopg[binary]>=3.2.0",
  "qdrant-client>=1.18.0,<1.19",
  "ragas==0.4.3",
  "sqlalchemy>=2.0.46",
]

[project.scripts]
researchmate-dispatch-outbox = "researchmate_worker.dispatch_outbox:main"
